fix: update helm values to match current chart schemas
- Remove deprecated webhook.enabled and cainjector.enabled from cert-manager
- Update 1password-connect values to match current chart structure
- Add dex certificateSecret config to argocd

--- a/apps/infrastructure/1password-connect.yaml
+++ b/apps/infrastructure/1password-connect.yaml
@@ -36,45 +36,37 @@ spec:
         # =======================================================================
         # Connect Server Configuration
         # =======================================================================
+        # IMPORTANT: You must create a secret containing your 1password-credentials.json
+        # kubectl create secret generic op-credentials \
+        #   --from-file=1password-credentials.json -n 1password
         connect:
-          # Number of Connect server replicas
+          create: true
           replicas: 1
-
-          # Resource limits and requests
-          resources:
-            limits:
-              cpu: 100m
-              memory: 128Mi
-            requests:
-              cpu: 50m
-              memory: 64Mi
-
-          # Service account configuration
-          serviceAccount:
-            create: true
-            name: onepassword-connect
-
-          # Credentials file configuration
-          # IMPORTANT: You must create a secret containing your 1password-credentials.json
-          # kubectl create secret generic op-credentials --from-file=1password-credentials.json -n 1password
-          credentials:
-            # Use existing secret (recommended)
-            existingSecret: op-credentials
-            # Key in the secret containing the credentials JSON
-            secretKey: 1password-credentials.json
+          # The name of Kubernetes Secret containing the 1Password Connect credentials
+          credentialsName: op-credentials
+          credentialsKey: 1password-credentials.json
+          serviceType: ClusterIP
+          api:
+            resources:
+              limits:
+                cpu: 100m
+                memory: 128Mi
+              requests:
+                cpu: 50m
+                memory: 64Mi
 
         # =======================================================================
         # Operator Configuration
         # =======================================================================
+        # IMPORTANT: Create a secret containing your operator token
+        # kubectl create secret generic onepassword-token \
+        #   --from-literal=token=<your-token> -n 1password
         operator:
-          # Enable the 1Password Kubernetes Operator
-          # This allows using OnePasswordItem CRDs to sync secrets
           create: true
-
-          # Number of operator replicas
           replicas: 1
-
-          # Resource limits and requests
+          token:
+            name: onepassword-token
+            key: token
           resources:
             limits:
               cpu: 100m
@@ -82,33 +74,6 @@ spec:
             requests:
               cpu: 50m
               memory: 64Mi
-
-          # Watch all namespaces for OnePasswordItem resources
-          # Set to specific namespace to restrict
-          watchNamespace: []
-
-          # Token for operator to communicate with Connect server
-          # IMPORTANT: Create a secret containing your operator token
-          # kubectl create secret generic onepassword-token --from-literal=token=<your-token> -n 1password
-          token:
-            existingSecret: onepassword-token
-            key: token
-
-        # =======================================================================
-        # Service Configuration
-        # =======================================================================
-        service:
-          # Service type for Connect API
-          type: ClusterIP
-          # Port for the Connect API
-          port: 8080
-
-        # =======================================================================
-        # Ingress Configuration
-        # =======================================================================
-        ingress:
-          # Disable ingress by default (Connect should only be internal)
-          enabled: false
 
   # -----------------------------------------------------------------------------
   # Destination Configuration
