security(mqtt): add password authentication for Redis sidecar
Configure Redis to require password authentication using the
redis-password secret key. Updates EMQX config and Redis container
to use the password for all connections.

--- a/apps/mqtt/configmap.yaml
+++ b/apps/mqtt/configmap.yaml
@@ -23,6 +23,7 @@ data:
       backend = redis
       redis_type = single
       server = "127.0.0.1:6379"
+      password = "${REDIS_PASSWORD}"
       cmd = "HMGET mqtt:${username} password_hash salt"
       database = 0
       enable = true
