fix(mqtt): use EMQX env var override for Redis password
EMQX config uses ${VAR} for internal substitution, not environment
variables. Use EMQX_AUTHENTICATION__1__PASSWORD env var to override
the Redis password in the authentication config array.

--- a/apps/mqtt/statefulset.yaml
+++ b/apps/mqtt/statefulset.yaml
@@ -52,7 +52,7 @@ spec:
                 secretKeyRef:
                   name: mqtt-secrets
                   key: dashboard-password
-            - name: REDIS_PASSWORD
+            - name: EMQX_AUTHENTICATION__1__PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mqtt-secrets
