refactor(mqtt): move dashboard username to secret
Remove hardcoded dashboard username from config and source it from
the mqtt-secrets secret via EMQX_DASHBOARD__DEFAULT_USERNAME env var.

--- a/apps/mqtt/statefulset.yaml
+++ b/apps/mqtt/statefulset.yaml
@@ -47,6 +47,11 @@ spec:
                 secretKeyRef:
                   name: mqtt-secrets
                   key: node-cookie
+            - name: EMQX_DASHBOARD__DEFAULT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mqtt-secrets
+                  key: dashboard-username
             - name: EMQX_DASHBOARD__DEFAULT_PASSWORD
               valueFrom:
                 secretKeyRef:
