refactor(budget-importer): convert to helm chart

--- a/apps/budget-importer/templates/onepassword-item.yaml
+++ b/apps/budget-importer/templates/onepassword-item.yaml
@@ -1,11 +1,11 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-  name: budget-importer-secrets
+  name: {{ .Values.secretName }}
   labels:
-    app: budget-importer
-    app.kubernetes.io/name: budget-importer
+    app: {{ .Chart.Name }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
     app.kubernetes.io/component: secrets
-    app.kubernetes.io/part-of: budget-importer
+    app.kubernetes.io/part-of: {{ .Chart.Name }}
 spec:
   itemPath: "vaults/k8s-secrets/items/budget-importer"
