--- a/apps/budget-importer/templates/cronjob.yaml
+++ b/apps/budget-importer/templates/cronjob.yaml
@@ -1,12 +1,11 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: budget-importer
+  name: {{ .Chart.Name }}
   labels:
-    app: budget-importer
+    app: {{ .Chart.Name }}
 spec:
-  # Run every 6 hours
-  schedule: "0 */6 * * *"
+  schedule: {{ .Values.schedule | quote }}
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 3
@@ -17,10 +16,10 @@ spec:
       template:
         metadata:
           labels:
-            app: budget-importer
-            app.kubernetes.io/name: budget-importer
+            app: {{ .Chart.Name }}
+            app.kubernetes.io/name: {{ .Chart.Name }}
             app.kubernetes.io/component: cronjob
-            app.kubernetes.io/part-of: budget-importer
+            app.kubernetes.io/part-of: {{ .Chart.Name }}
         spec:
           restartPolicy: OnFailure
           securityContext:
@@ -31,11 +30,11 @@ spec:
           volumes:
             - name: secrets
               secret:
-                secretName: budget-importer-secrets
+                secretName: {{ .Values.secretName }}
           containers:
-            - name: budget-importer
-              image: ghcr.io/markis/budget-importer:0.1.0
-              imagePullPolicy: IfNotPresent
+            - name: {{ .Chart.Name }}
+              image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+              imagePullPolicy: {{ .Values.image.pullPolicy }}
               args:
                 - "-config"
                 - "/var/secrets/config.yaml"
@@ -50,9 +49,4 @@ spec:
                   mountPath: /var/secrets
                   readOnly: true
               resources:
-                requests:
-                  memory: "32Mi"
-                  cpu: "50m"
-                limits:
-                  memory: "128Mi"
-                  cpu: "200m"
+                {{- toYaml .Values.resources | nindent 16 }}
