--- a/apps/dark-detector/templates/deployment.yaml
+++ b/apps/dark-detector/templates/deployment.yaml
@@ -23,6 +23,7 @@ spec:
 {{- range $values.detectors }}
         - name: {{ $chartName }}-{{ .name }}
           image: "{{ $values.image.repository }}:{{ $values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
             {{ toYaml $values.resources | nindent 12 }}
           env:
