refactor: prefix application names with infra. and app.
- Infrastructure apps: infra.argocd, infra.traefik, etc.
- User apps: app.budget-importer, app.dark-detector, etc.

--- a/argocd/apps/templates/applications.yaml
+++ b/argocd/apps/templates/applications.yaml
@@ -3,7 +3,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ .name }}
+  name: app.{{ .name }}
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
