--- a/argocd/infrastructure/templates/applications.yaml
+++ b/argocd/infrastructure/templates/applications.yaml
@@ -3,7 +3,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ .name }}
+  name: infra.{{ .name }}
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
