--- a/apps/mqtt/templates/rbac.yaml
+++ b/apps/mqtt/templates/rbac.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: mqtt
+  name: {{ .Chart.Name }}
   labels:
-    app: mqtt
+    app: {{ .Chart.Name }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: mqtt
+  name: {{ .Chart.Name }}
   labels:
-    app: mqtt
+    app: {{ .Chart.Name }}
 rules:
   - apiGroups:
       - ""
@@ -24,14 +24,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: mqtt
+  name: {{ .Chart.Name }}
   labels:
-    app: mqtt
+    app: {{ .Chart.Name }}
 subjects:
   - kind: ServiceAccount
-    name: mqtt
-    namespace: default
+    name: {{ .Chart.Name }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: mqtt
+  name: {{ .Chart.Name }}
   apiGroup: rbac.authorization.k8s.io
