--- a/argocd/apps/values.yaml
+++ b/argocd/apps/values.yaml
@@ -1,40 +1,14 @@
 # =============================================================================
-# Application Deployments
+# Application Deployments - ApplicationSet Configuration
 # =============================================================================
-# This file defines all user applications deployed via ArgoCD.
-# Each app entry generates an ArgoCD Application CRD pointing to a Helm chart
-# in the apps/ directory.
+# This ApplicationSet automatically discovers and deploys all Helm charts
+# found in the apps/ directory. No manual registration required.
 #
 # To add a new application:
 #   1. Create a Helm chart in apps/<name>/
-#   2. Add a new entry to the apps list below
-#   3. Optionally specify a custom namespace (defaults to 'default')
+#   2. The ApplicationSet will automatically detect and deploy it
 # =============================================================================
 
 repoURL: https://github.com/markis/cluster-config.git
 targetRevision: main
 basePath: apps
-
-apps:
-  # ===========================================================================
-  # Budget Importer - Scheduled Data Import Job
-  # ===========================================================================
-  # CronJob that imports budget data every 6 hours.
-  # Uses 1Password Connect to securely inject configuration secrets.
-  # ===========================================================================
-  - name: budget-importer
-
-  # ===========================================================================
-  # Dark Detector - Highway Sky Brightness Detection
-  # ===========================================================================
-  # Monitors highway camera images to detect sky brightness levels.
-  # Runs multiple detectors for different camera crop regions.
-  # ===========================================================================
-  - name: dark-detector
-
-  # ===========================================================================
-  # MQTT - Message Broker
-  # ===========================================================================
-  # MQTT message broker for IoT and home automation messaging.
-  # ===========================================================================
-  - name: mqtt
