--- a/argocd/infrastructure/values.yaml
+++ b/argocd/infrastructure/values.yaml
@@ -237,6 +237,8 @@ infra:
       ingressRoute:
         dashboard:
           enabled: false
+      ping:
+        entryPoint: web
       resources:
         limits:
           cpu: 300m
@@ -246,8 +248,6 @@ infra:
           memory: 50Mi
       additionalArguments:
         - "--metrics.prometheus=true"
-        - "--ping=true"
-        - "--ping.entryPoint=web"
 
   # ===========================================================================
   # Monitoring Secrets - 1Password integration for Grafana
