fix(grafana): update root_url to external hostname for CORS support
Changed root_url from http://grafana.k3s.lan to https://grafana.markis.network
to allow browser requests with the external Origin header.

--- a/argocd/infrastructure/values.yaml
+++ b/argocd/infrastructure/values.yaml
@@ -333,7 +333,7 @@ infra:
             - grafana.k3s.lan
         grafana.ini:
           server:
-            root_url: http://grafana.k3s.lan
+            root_url: https://grafana.markis.network
       alertmanager:
         enabled: false
       nodeExporter:
