refactor: simplify OPNsense routing - remove VIP and internal hostnames
- Update Grafana ingress to use external hostname (grafana.markis.network)
- Update README to reflect simplified architecture:
  - Remove VIP (10.0.0.16) - relayd listens on 0.0.0.0:8080
  - Remove .k3s.lan internal hostnames
  - Remove Caddy header rewrite (no longer needed)
  - Traefik now matches on external hostnames directly

--- a/argocd/infrastructure/values.yaml
+++ b/argocd/infrastructure/values.yaml
@@ -330,7 +330,7 @@ infra:
           enabled: true
           ingressClassName: traefik
           hosts:
-            - grafana.k3s.lan
+            - grafana.markis.network
         grafana.ini:
           server:
             root_url: https://grafana.markis.network
