fix(prometheus): disable admission webhook patch jobs to fix ArgoCD sync

--- a/argocd/infrastructure/values.yaml
+++ b/argocd/infrastructure/values.yaml
@@ -361,3 +361,6 @@ infra:
           limits:
             cpu: 200m
             memory: 200Mi
+        admissionWebhooks:
+          patch:
+            enabled: false
