--- a/argocd/infrastructure/values.yaml
+++ b/argocd/infrastructure/values.yaml
@@ -44,20 +44,20 @@ infra:
         replicas: 1
         resources:
           limits:
-            cpu: 500m
-            memory: 512Mi
+            cpu: "1"
+            memory: 1Gi
           requests:
             cpu: 250m
-            memory: 256Mi
+            memory: 512Mi
       repoServer:
         replicas: 1
         resources:
           limits:
-            cpu: 500m
-            memory: 512Mi
+            cpu: "1"
+            memory: 1Gi
           requests:
             cpu: 100m
-            memory: 128Mi
+            memory: 256Mi
       redis:
         enabled: true
         resources:
