feat(dark-detector): add security context and use service DNS for MQTT
- Add pod security context running as nobody (65534)
- Add container security context with read-only filesystem and dropped capabilities
- Disable service account token automount
- Replace hardcoded MQTT IP with service FQDN

--- a/apps/dark-detector/templates/deployment.yaml
+++ b/apps/dark-detector/templates/deployment.yaml
@@ -19,11 +19,23 @@ spec:
       labels:
         app: {{ $chartName }}
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534
+        runAsGroup: 65534
+        fsGroup: 65534
       containers:
 {{- range $values.detectors }}
         - name: {{ $chartName }}-{{ .name }}
           image: "{{ $values.image.repository }}:{{ $values.image.tag }}"
           imagePullPolicy: {{ $values.image.pullPolicy }}
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
           resources:
             {{ toYaml $values.resources | nindent 12 }}
           env:
