--- a/apps/dark-detector/values.yaml
+++ b/apps/dark-detector/values.yaml
@@ -12,7 +12,7 @@ resources:
     cpu: 200m
 
 mqtt:
-  host: "10.0.0.1"
+  host: "mqtt.default.svc.cluster.local"
   port: "1883"
   interval: "30"
   secretName: dark-detector-secrets
