feat(dynasty): add traefik ingress for dynasty.markis.network
- Add IngressRoute to expose dynasty via Traefik web entrypoint
- Change service type from LoadBalancer to ClusterIP
- Configure ingress host as dynasty.markis.network

--- a/apps/dynasty/values.yaml
+++ b/apps/dynasty/values.yaml
@@ -23,8 +23,11 @@ deployment:
       cpu: "1"
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 8501
   targetPort: 8501
+
+ingress:
+  host: dynasty.markis.network
 
 secretName: dynasty-secrets
